log out div not showing issue

--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -34,7 +34,7 @@
   right: 0;
   z-index: 1100;
   width: 30%;
-  height: 100vh;
+  height: 100%;
   background-color: black;
   color: white;
 }
